ドッカーRUN学習

--- a/ex02/Dockerfile
+++ b/ex02/Dockerfile
@@ -1,7 +1,8 @@
 FROM php:7.4-apache
 
 RUN apt-get update && apt-get install -y \
-    tzdata \
+tzdata \
+&& rm -rf /var/lib/apt/lists/*
 
 ENV TZ=Asia/Tokyo
 
@@ -9,6 +10,6 @@ WORKDIR /usr/local/etc/php
 
 COPY php.ini ${PWD}
 
-ARG WORKDIR
+ARG wdir="/var/www/html"
 
 WORKDIR $wdir
