docker-composeプロジェクト

--- a/ex11/web/Dockerfile
+++ b/ex11/web/Dockerfile
@@ -4,6 +4,6 @@ RUN apt-get update && apt-get install -y \
     tzdata \
     libpq-dev \
 && rm -rf /var/lib/apt/lists/* \
-&& docker-php-ext-install pdo_pqsql
+&& docker-php-ext-install pdo_pgsql
 
 ENV TZ=Asia/Tokyo
